test/bad/functions/call01.px

func f(Int x) Bool def
    return x == x

f("3")
